--- a/pages/tabBar/category/index.wxml
+++ b/pages/tabBar/category/index.wxml
@@ -16,7 +16,7 @@
                     <text class="delimiter">/</text>
                 </view>
                 <view class="goods_list">
-                    <navigator wx:for="{{item1.children}}" wx:for-index="index2" wx:for-item="item2" wx:key="cat_id" url="/pages/goods_list/index?cid={{item2.cat_id}}">
+                    <navigator wx:for="{{item1.children}}" hover-class="none" wx:for-index="index2" wx:for-item="item2" wx:key="cat_id" url="/pages/goods_list/index?cid={{item2.cat_id}}">
                         <image mode="widthFix" src="{{item2.cat_icon}}"></image>
                         <view class="goods_name">{{item2.cat_name}}</view>
                     </navigator>
